feat: Add unit tests to the api module (#8)
